--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting...</title>
-    <script>
-        var newURL = "https://easyengine-notes.pages.dev" + window.location.pathname + window.location.search;
-        window.location.replace(newURL);
-    </script>
+  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0; url=https://easyengine-notes.pages.dev/">
+  <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://easyengine-notes.pages.dev/">click here</a>.</p>
+  <p>If you are not redirected, <a href="https://easyengine-notes.pages.dev/">click here</a>.</p>
 </body>
 </html>
