--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=https://easyengine-notes.pages.dev/">
   <title>Redirecting...</title>
+  <script>
+    window.location.replace("https://easyengine-notes.pages.dev/" + window.location.pathname + window.location.search);
+  </script>
 </head>
 <body>
   <p>If you are not redirected, <a href="https://easyengine-notes.pages.dev/">click here</a>.</p>
