--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
   <meta charset="UTF-8">
   <title>Redirecting...</title>
   <script>
-    window.location.replace("https://easyengine-notes.pages.dev/" + window.location.pathname + window.location.search);
+    // Lấy đường dẫn hiện tại
+    var path = window.location.pathname;
+    // Nếu đường dẫn bắt đầu với "/easyengine-notes", loại bỏ nó
+    if (path.indexOf("/easyengine-notes") === 0) {
+      path = path.replace("/easyengine-notes", "");
+    }
+    var newURL = "https://easyengine-notes.pages.dev" + path + window.location.search;
+    window.location.replace(newURL);
   </script>
 </head>
 <body>
