--- a/index.html
+++ b/index.html
@@ -3,12 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Redirecting...</title>
-  <script>
-    window.onload = function() {
-      console.log("Script chạy"); // Debug để kiểm tra script có chạy không
-      window.location.replace("https://easyengine-notes.pages.dev" + window.location.pathname + window.location.search);
-    };
-  </script>
+  <meta http-equiv="refresh" content="0; url=https://easyengine-notes.pages.dev/">
 </head>
 <body>
   <p>If you are not redirected, <a href="https://easyengine-notes.pages.dev/">click here</a>.</p>
