--- a/404.html
+++ b/404.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <script>
-        // Lấy toàn bộ path sau '/easyengine-notes/'
-        const fullPath = window.location.pathname.split('/easyengine-notes/')[1] || '';
-        
-        // Redirect sang Cloudflare Pages
-        window.location.replace(`https://easyengine-notes.pages.dev/${fullPath}${window.location.search}${window.location.hash}`);
-    </script>
+  <meta charset="utf-8">
+  <script>
+    // Lấy toàn bộ path sau '/easyengine-notes/'
+    const fullPath = window.location.pathname.split('/easyengine-notes/')[1] || '';
+    // Tạo URL chuyển hướng tương ứng
+    const redirectUrl = `https://easyengine-notes.pages.dev/${fullPath}${window.location.search}${window.location.hash}`;
+
+    // Tạo thẻ canonical và thêm vào head
+    const canonicalLink = document.createElement('link');
+    canonicalLink.setAttribute('rel', 'canonical');
+    canonicalLink.setAttribute('href', redirectUrl);
+    document.head.appendChild(canonicalLink);
+
+    // Thực hiện chuyển hướng
+    window.location.replace(redirectUrl);
+  </script>
 </head>
 <body>
-    Redirecting to Cloudflare Pages...
+  Redirecting to Cloudflare Pages...
 </body>
 </html>
